# bananafingersbot

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  database.py  docker-compose.yaml  helpers.py  pyproject.toml  settings.py  startup.sh  tasks.py
