[tool.poetry]
name = "bananafingers"
version = "0.1.0"
description = ""
authors = ["Preatca <artiom.preatca@ebs-integrator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
pytelegrambotapi = "^4.10.0"
python-dotenv = "^0.21.1"
python-telegram-bot-pagination = "^0.0.2"
pre-commit = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
